--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
+        "vite": "^5.0",
+        "vue": "^3.4.31"
     },
     "dependencies": {
-        "@inertiajs/vue3": "^1.2.0",
-        "@vitejs/plugin-vue": "^5.0.5",
-        "vue": "^3.4.31"
+        "@vueuse/core": "^10.11.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "ldrs": "^1.0.2",
+        "lucide-vue-next": "^0.407.0",
+        "radix-vue": "^1.9.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
