--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.31"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "@vueuse/core": "^10.11.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
         "lucide-vue-next": "^0.407.0",
         "radix-vue": "^1.9.0",
         "tailwind-merge": "^2.3.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "vuetify": "^3.6.13"
     }
 }
