--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.31"
     },
     "dependencies": {
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@mdi/font": "^7.4.47",
         "@vueuse/core": "^10.11.0",
         "class-variance-authority": "^0.7.0",
